View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025651 | Open CASCADE | OCCT:Visualization | public | 2014-12-23 19:16 | 2015-05-14 15:32 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.8.0 | ||||
Target Version | 6.9.0 | Fixed in Version | 6.9.0 | ||
Summary | 0025651: Visualization - GL_LUMINANCE8 should be defined for OpenGL ES 2.0 | ||||
Description | GLES2 of android's ndks doesn't contain GL_LUMINANCE8 definition but it should. | ||||
Tags | No tags attached. | ||||
Test case number | |||||
|
Branch CR25651 has been created by ibs. SHA-1: fc6800ab2c92c9a3b28fccdf06a62c5c97106350 Detailed log of new commits: Author: ibs Date: Fri Dec 19 18:40:31 2014 +0300 0025651: GL_LUMINANCE8 should be defined for android case GL_LUMINANCE8 defined |
|
dear kgv, please review CR25651 occt branch |
|
Please check compilation ad integrate - no testing needed. |
|
Dear BugMaster, Branch CR25651 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms. SHA-1: fc6800ab2c92c9a3b28fccdf06a62c5c97106350 Number of compiler warnings: occt component : Linux: 18 (18 on master) Windows: 0 (0 on master) products component : Linux: 11 (11 on master) Windows: 1 (1 on master) |
|
Branch CR25651 has been deleted by inv. SHA-1: fc6800ab2c92c9a3b28fccdf06a62c5c97106350 |
Date Modified | Username | Field | Change |
---|---|---|---|
2014-12-23 19:16 |
|
New Issue | |
2014-12-23 19:16 |
|
Assigned To | => ibs |
2014-12-23 19:18 | git | Note Added: 0035624 | |
2014-12-23 19:19 |
|
Assigned To | ibs => kgv |
2014-12-23 19:19 |
|
Status | new => resolved |
2014-12-23 19:19 |
|
Steps to Reproduce Updated | |
2014-12-23 19:19 |
|
Steps to Reproduce Updated | |
2014-12-23 19:19 |
|
Note Added: 0035625 | |
2014-12-23 20:19 | kgv | Note Added: 0035628 | |
2014-12-23 20:19 | kgv | Assigned To | kgv => bugmaster |
2014-12-23 20:19 | kgv | Severity | minor => trivial |
2014-12-23 20:19 | kgv | Status | resolved => reviewed |
2014-12-23 20:19 | kgv | Summary | GL_LUMINANCE8 should be defined for android case => Visualization - GL_LUMINANCE8 should be defined for OpenGL ES 2.0 |
2014-12-24 11:18 |
|
Assigned To | bugmaster => mkv |
2014-12-25 09:52 |
|
Note Added: 0035702 | |
2014-12-25 09:52 |
|
Assigned To | mkv => bugmaster |
2014-12-25 09:52 |
|
Status | reviewed => tested |
2014-12-25 09:52 |
|
Note Edited: 0035702 | |
2014-12-26 13:33 | bugmaster | Changeset attached | => occt master bbe97edd |
2014-12-26 13:33 | bugmaster | Status | tested => verified |
2014-12-26 13:33 | bugmaster | Resolution | open => fixed |
2015-01-26 12:33 | git | Note Added: 0036549 | |
2015-05-14 15:29 |
|
Status | verified => closed |
2015-05-14 15:32 |
|
Fixed in Version | => 6.9.0 |