0025651: GL_LUMINANCE8 should be defined for android case

GL_LUMINANCE8 defined